--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start"
+    },
+    "dependencies": {
+        "next": "^14.2.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
